Prevent overflow

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -17,6 +17,11 @@ body {
   }
 }
 
+// Happens on Firefox mobile
+html, body {
+  overflow-x: hidden;
+}
+
 button {
   cursor: pointer;
 }
